--- a/pages/favs.html
+++ b/pages/favs.html
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="../index.html">
           <img
             src="../assets/images/logo-light.svg"
             alt="Logo"
@@ -39,7 +39,7 @@
         </a>
 
         <a
-          href="/index.html"
+          href="../index.html"
           type="button"
           class="btn btn-outline-secondary"
         >
