--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ i<!DOCTYPE html>
 <body>
   <nav class="navbar bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="/index.html">
+      <a class="navbar-brand" href="./index.html">
         <img src="./assets/images/logo-light.svg" alt="Logo" width="200" class="d-inline-block align-text-top" />
       </a>
 
