--- a/pages/favs.html
+++ b/pages/favs.html
@@ -53,6 +53,6 @@
     <main>
       <div class="container fav-movies-container d-flex justify-content-between mt-5"></div>
     </main>
-    <script src="/favs.js"></script>
+    <script src="../favs.js"></script>
   </body>
 </html>
